--- a/alelo/assets/css/main.scss
+++ b/alelo/assets/css/main.scss
@@ -396,7 +396,10 @@ a:hover {
 .nav-tabs-list {
   border-bottom: 1px solid #707070;
   padding: 30px 0 0;
-  width: 684px;
+}
+
+.nav-tabs-list .nav-item {
+  border-bottom: 1px solid #000;
 }
 
 .nav-tabs-list .nav-item {
