--- a/alelo/assets/css/main.scss
+++ b/alelo/assets/css/main.scss
@@ -810,17 +810,18 @@ a:hover {
   margin-right: 10px;
 }
 
-.tooltip.bs-tooltip-top .tooltip-inner,
-.tooltip.bs-tooltip-bottom .tooltip-inner {
+.tooltip-inner {
   background: #707070;
-  font-style: 10px;
+  font-size: 12px;
 }
 
-.bs-tooltip-auto[x-placement^="t"] .arrow::before,
+.tooltip .arrow::before,
+.bs-tooltip-auto[x-placement^="top"] .arrow::before,
 .bs-tooltip-top .arrow::before,
-.bs-tooltip-auto[x-placement^="t"] .arrow::before,
+.bs-tooltip-auto[x-placement^="bottom"] .arrow::before,
 .bs-tooltip-bottom .arrow::before {
-  border-bottom-color: #707070; /* Red */
+  border-top-color: #707070;
+  border-bottom-color: #707070;
 }
 
 @media (min-width: 576px) {
