Class Viewer - Margins and different states

--- a/alelo/assets/css/main.scss
+++ b/alelo/assets/css/main.scss
@@ -824,6 +824,8 @@ a:hover {
   border-bottom-color: #707070;
 }
 
+.group-button a {margin-left: 32px;}
+
 @media (min-width: 576px) {
   .modal-dialog {
     max-width: 752px;
