Add sorter to class student

--- a/alelo/assets/css/main.scss
+++ b/alelo/assets/css/main.scss
@@ -773,6 +773,7 @@ a:hover {
 .table-lst-student-custom th {
   padding-left: 20px;
   padding-right: 20px;
+  white-space: nowrap;
 }
 .table-lst-student-custom td {
   font-size: 14px;
