--- a/alelo/assets/css/main.scss
+++ b/alelo/assets/css/main.scss
@@ -13,7 +13,7 @@
     position:absolute;
     left:0px;
     top:0px;
-    min-width:3500px;
+    min-width:2500px;
     margin-top:0px;
 }
 
@@ -34,16 +34,14 @@
   white-space:no-wrap;
   vertical-align:middle;
   background-color:#fff;
-  position: absolute;
-  top: 12px;
 }
 
 .scroller-left {
-  left: -30px;
+  margin-left: -30px;
 }
 
 .scroller-right {
-  right: -30px;
+  margin-right: -30px;
 }
 
 .scroll-wrapper {
