--- a/alelo/assets/css/main.scss
+++ b/alelo/assets/css/main.scss
@@ -999,10 +999,9 @@ table th a {
   }
 
   .invited-students {
-    min-height: 200px;
+    height: 230px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    max-height: 230px;
 
     .invited-students__content {
       padding: 15px;
