--- a/alelo/assets/css/main.scss
+++ b/alelo/assets/css/main.scss
@@ -171,9 +171,8 @@
 
       .scroll-bar {
         background-color: #cbcbcb;
-        height: 190px!important;
+        height: 190px !important;
       }
-
     }
   }
 }
@@ -220,7 +219,6 @@
 .scrollbar-list > .scroll-element .scroll-element_outer,
 .scrollbar-list > .scroll-element .scroll-element_track,
 .scrollbar-list > .scroll-element .scroll-bar,
-
 .scrollbar-inner > .scroll-element .scroll-element_outer,
 .scrollbar-inner > .scroll-element .scroll-element_track,
 .scrollbar-inner > .scroll-element .scroll-bar {
@@ -735,7 +733,6 @@ a:hover {
   .end-date {
     input {
       border-radius: 0 6px 6px 0;
-
     }
   }
 }
@@ -743,7 +740,7 @@ a:hover {
   border: none;
   font-size: 20px;
   font-weight: 500;
-  border: 1px solid #61AAE8;
+  border: 1px solid #61aae8;
   border-radius: 6px;
   padding: 5px;
   color: #707070;
@@ -1008,7 +1005,6 @@ a:hover {
         background: #3177b2;
         border: 1px solid #3177b2;
       }
-
     }
 
     span {
