--- a/alelo/assets/css/main.scss
+++ b/alelo/assets/css/main.scss
@@ -681,7 +681,7 @@ a:hover {
 }
 
 .launch_ap {
-  background: url(/assets/images/launch_ap.png) no-repeat 0px 3px;
+  background: url(../images/launch_ap.png) no-repeat 0px 3px;
   background-size: 100%;
   width: 18px;
   display: block;
@@ -759,7 +759,7 @@ a:hover {
 }
 
 .wrap-date .end-date:after {
-  background: url("/assets/images/calendar.png") no-repeat 0 0;
+  background: url("../images/calendar.png") no-repeat 0 0;
   width: 56px;
   height: 42px;
   position: absolute;
