--- a/alelo/assets/css/main.scss
+++ b/alelo/assets/css/main.scss
@@ -681,7 +681,7 @@ a:hover {
 }
 
 .launch_ap {
-  background: url(../images/launch_ap.png) no-repeat 0px 3px;
+  background: url("../images/launch_ap.png") no-repeat 0px 3px;
   background-size: 100%;
   width: 18px;
   display: block;
