issue_103: Change the footer

--- a/alelo/assets/css/main.scss
+++ b/alelo/assets/css/main.scss
@@ -564,6 +564,10 @@ a:hover {
   margin-top: 50px;
 }
 
+.text-decoration-underline {
+  text-decoration: underline;
+}
+
 /**
    * Class List
    */
