update image urls

--- a/alelo/assets/css/main.scss
+++ b/alelo/assets/css/main.scss
@@ -698,7 +698,7 @@ a:hover {
 }
 
 .launch_ap {
-  background: url(../images/launch_ap.png) no-repeat 0px 3px;
+  background: url(./images/launch_ap.png) no-repeat 0px 3px;
   background-size: 100%;
   width: 18px;
   display: block;
@@ -777,7 +777,7 @@ a:hover {
 }
 
 .wrap-date .end-date:after {
-  background: url("../images/calendar.png") no-repeat 0 0;
+  background: url("./images/calendar.png") no-repeat 0 0;
   width: 56px;
   height: 42px;
   position: absolute;
